[package]
name = "mdbook-confluence"
version = "0.0.1"
authors = ["Dylan Owen <dyltotheo@gmail.com>"]
description = "sync mdbook to confluence"
readme = "Readme.md"
license = "MPL-2.0"
homepage = "https://github.com/dylanowen/mdbook-confluence"
repository = "https://github.com/dylanowen/mdbook-confluence"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
colored = "1.9"
lazy_static = "1.4"
regex = "1.3"

mdbook = "0.3"
#clap = "2.33"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
pulldown-cmark = "0.6"
pulldown-cmark-to-cmark = "2.0"

tokio = { version = "0.2", features = ["blocking", "macros"] }
futures = "0.3"
async-trait = "0.1"

#toml = "0.5"
#confluence = { path = "../confluence-rs" }
confluence = { git = "https://github.com/dylanowen/confluence-rs", branch = "client" }
xmltree = "0.10"
chrono = "0.4"
base64 = "0.12"
mime_guess = "2.0"

semver = "0.9"
unicode-segmentation = "1.6"